# nanoGPT

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scaling_laws.ipynb  transformer_sizing.ipynb
.github/workflows/: ci.yml
data/openwebtext/: prepare.py
data/shakespeare/: prepare.py
data/shakespeare_char/: prepare.py
nanogpt/: __init__.py  config.py  model.py  sampler.py  trainer.py  utils.py
scripts/: bench.py  sample.py  train.py
tests/nanogpt/: __init__.py  test_config.py  test_model.py  test_utils.py
